codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_newly_installed_marketplace.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Plugins
  Debug Marketplace installed successfully.
  Select the plugins you want to use and press Enter to install or view details.

  All Plugins  Installed (0)  OpenAI Curated  Workspace  [Debug Marketplace]  Add Marketplace

  Type to search plugins
❯ [-] Debug Plugin  Available   Press Enter to install or view plugin details.

  ctrl + u upgrade · ctrl + r remove · space toggle · ←/→ tabs · enter details · esc close
